--- a/paper/research paper template two column.tex
+++ b/paper/research paper template two column.tex
@@ -18,7 +18,7 @@
 \urlstyle{same}
 
 
-\title{Hand Gesture Recognition on Arduino Using Time Series Classification}
+\title{Hand Gesture Recognition on Arduino Using Machine Learning and Ambient Light}
 
 \author{
 Matthew Lipski\\
@@ -40,11 +40,11 @@ r.zhu-1@tudelft.nl
 
 \input{sections/introduction}
 
-%\input{sections/methodology_or_problem_description}
+\input{sections/background}
 %
-%\input{sections/your_contribution}
+\input{sections/system_overview}
 %
-%\input{sections/experimental_setup_and_results}
+\input{sections/model_design.tex}
 %
 %\input{sections/responsible_research}
 %
